# shuttlebot

./: Cargo.toml  README.md
.cargo/: config.toml
backend/: .gitignore  .ignore  Cargo.toml  Secrets.toml.example  Shuttle.toml  sqlx-data.json
backend/migrations/: 20230609121212_init.sql
backend/src/: bot.rs  commands.rs  database.rs  github.rs  main.rs  oauth.rs  persist.rs  router.rs  utils.rs
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/issues/: page.tsx
frontend/components/: Chart.tsx  Navbar.tsx  Search.tsx
migrations/: 20230609121212_init.sql
src/: bot.rs  commands.rs  main.rs  router.rs  utils.rs
templates/: base.html
