[package]
name = "bot"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
indoc = "2.0.1"
octocrab = "0.25.1"
serenity = { version = "0.11.5", default-features = false, features = ["unstable_discord_api", "client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.18.0"
shuttle-secrets = "0.18.0"
shuttle-serenity = "0.18.0"
shuttle-shared-db = { version = "0.18.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
tokio = "1.28.2"
tracing = "0.1.37"

